--- a/rocksdb/eval/mutant-mdcaching-ycsb-thrp-latency-by-costs/config.yaml
+++ b/rocksdb/eval/mutant-mdcaching-ycsb-thrp-latency-by-costs/config.yaml
@@ -3,7 +3,22 @@ mutant:
   by_cost_slos:
     # cost_slo, cost_slo_epsilon
     "0.1, 0.1":
-      # TODO: Running the lower range ones...
+      1000:
+        fn: 171223-135151/ycsb/171223-191031.329-d
+        time: 01:30:00-04:30:00
+      1500:
+        fn: 171223-135210/ycsb/171223-191043.215-d
+        time: 01:15:00-02:45:00
+      2000:
+        fn: 171222-170906/ycsb/171222-222633.705-d
+        time: 00:45:00-02:30:00
+      2500:
+        fn: 171223-135232/ycsb/171223-191112.989-d
+        #time: 00:35:00-01:40:00
+        time: 00:31:55-01:40:00
+      3000:
+        fn: 171223-135253/ycsb/171223-191136.415-d
+        time: 00:36:00-01:30:00
       3500:
         fn: 171220-150103/ycsb/171220-202014.837-d
         time: 00:50:00-01:42:00
@@ -13,6 +28,25 @@ mutant:
       4500:
         fn: 171220-150139/ycsb/171220-202011.910-d
         time: 01:40:00-01:55:00
+
+      #1000: 171224-025037/ycsb/171224-080914.526-d
+      #1500: 171224-025056/ycsb/171224-080927.744-d
+      #2000: 171224-025114/ycsb/171224-080938.899-d
+      #2500: 171224-025130/ycsb/171224-080937.280-d
+      #3000: 171224-025149/ycsb/171224-080953.638-d
+      #3500: 171224-025205/ycsb/171224-080906.296-d
+      #4000: 171224-025220/ycsb/171224-081016.328-d
+
+      #4600:
+      #  fn: 171224-025237/ycsb/171224-081027.374-d
+      #  time: 01:57:00-02:12:00
+      #4800:
+      #  fn: 171224-025252/ycsb/171224-081046.425-d
+      #  time: 01:57:00-02:09:00
+      5000:
+        fn: 171224-025308/ycsb/171224-081052.381-d
+        time: 02:06:00-02:09:00
+
       # These never stabilized
       #4600: 171220-150158/ycsb/171220-202027.795-d
       #4700: 171220-150214/ycsb/171220-201936.039-d
@@ -20,21 +54,23 @@ mutant:
       #4900: 171220-150250/ycsb/171220-202046.100-d
       #5000: 171220-150306/ycsb/171220-202104.032-d
     "0.2, 0.1":
-      1000:
-        fn: 171220-183509/ycsb/171220-235337.454-d
-        time: 02:06:00-03:00:00
-      2000:
-        fn: 171220-183529/ycsb/171220-235342.640-d
-        time: 00:45:00-02:30:00
-      3000:
-        fn: 171220-183548/ycsb/171220-235417.820-d
-        time: 00:30:00-01:15:00
-      4000:
-        fn: 171220-183607/ycsb/171220-235416.088-d
-        time: 00:30:00-01:30:00
-      5000:
-        fn: 171220-183626/ycsb/171220-235426.058-d
-        time: 00:50:00-01:10:00
+      # Latency higher than without metadata caching. Hmm.
+      #1000:
+      #  fn: 171220-183509/ycsb/171220-235337.454-d
+      #  #time: 02:06:00-03:00:00
+      #  time: 03:48:00-04:03:00
+      #2000:
+      #  fn: 171220-183529/ycsb/171220-235342.640-d
+      #  time: 00:45:00-02:30:00
+      #3000:
+      #  fn: 171220-183548/ycsb/171220-235417.820-d
+      #  time: 00:30:00-01:15:00
+      #4000:
+      #  fn: 171220-183607/ycsb/171220-235416.088-d
+      #  time: 00:30:00-01:30:00
+      #5000:
+      #  fn: 171220-183626/ycsb/171220-235426.058-d
+      #  time: 00:50:00-01:10:00
       # These never stabilized
       #6000: 171220-183643/ycsb/171220-235450.263-d
       #7000: 171220-183659/ycsb/171220-235336.861-d
@@ -42,23 +78,64 @@ mutant:
       #9000: 171220-183737/ycsb/171220-235530.392-d
       #10000: 171220-183756/ycsb/171220-235538.553-d
       #11000: 171220-183812/ycsb/171220-235357.264-d
+
+      1000:
+        fn: 171223-224708/ycsb/171224-040543.207-d
+        #time: 03:30:00-04:30:00
+        #time: 03:33:00-03:50:00
+        time: 03:42:00-03:50:00
+      2000:
+        fn: 171223-224730/ycsb/171224-040617.950-d
+        #time: 00:50:00-02:10:00
+        #time: 01:33:00-01:47:00
+        time: 01:03:00-01:10:30
+      3000:
+        fn: 171223-224749/ycsb/171224-040712.383-d
+        time: 02:10:00-02:50:00
+      4000:
+        fn: 171223-224807/ycsb/171224-040722.270-d
+        time: 01:40:00-01:50:00
+      #4500:
+      #  fn: 171223-224823/ycsb/171224-040640.462-d
+      #  time: 01:42:00-01:49:00
+      5000:
+        fn: 171224-122905/ycsb/171224-174738.433-d
+        time: 00:45:00-01:09:00
+      6000:
+        fn: 171224-122925/ycsb/171224-174806.732-d
+        time: 01:28:00-01:45:00
+      6200:
+        fn: 171224-122948/ycsb/171224-174849.379-d
+      #  time: 01:44:10-01:45:30
+        time: 01:44:20-01:45:20
+
+      # Never stablized
+      #6400: 171224-123007/ycsb/171224-174749.473-d
+      #6600: 171224-123028/ycsb/171224-174859.616-d
+      #6800: 171224-123045/ycsb/171224-174949.801-d
+      #7000: 171224-123103/ycsb/171224-174853.355-d
     "0.3, 0.1":
       1000:
         fn: 171220-183853/ycsb/171220-235700.884-d
-        time: 01:30:00-03:00:00
+        #time: 01:30:00-03:00:00
+        time: 02:20:00-03:05:00
       2000:
         fn: 171220-183912/ycsb/171220-235810.736-d
-        time: 00:45:00-01:55:00
+        #time: 00:45:00-01:55:00
+        time: 00:50:00-01:00:00
       3000:
         fn: 171220-183929/ycsb/171220-235722.453-d
         #time: 00:30:00-01:55:00
-        time: 00:30:00-01:00:00
+        #time: 00:30:00-01:00:00
+        time: 02:18:00-02:24:00
       4000:
         fn: 171220-183951/ycsb/171220-235711.386-d
-        time: 00:30:00-01:30:00
+        #time: 00:30:00-01:30:00
+        time: 01:36:00-02:03:00
       5000:
         fn: 171220-184009/ycsb/171220-235731.530-d
-        time: 00:20:00-01:10:00
+        #time: 00:20:00-01:10:00
+        time: 00:52:00-00:57:00
       6000:
         fn: 171220-184029/ycsb/171220-235722.114-d
         time: 00:22:00-00:58:00
@@ -68,7 +145,22 @@ mutant:
       8000:
         fn: 171221-012705/ycsb/171221-064515.769-d
         time: 00:51:00-01:10:00
+      8200:
+        fn: 171223-222043/ycsb/171224-033845.783-d
+        time: 00:55:00-01:18:00
+      # Too high
+      #8500:
+      #  fn: 171223-222101/ycsb/171224-033916.497-d
+      #  time: 01:13:00-01:16:00
+      9000:
+        fn: 171223-222121/ycsb/171224-033856.392-d
+        time: 00:59:10-01:10:50
       # These never stabilized
+      #9500: 171223-222138/ycsb/171224-034004.526-d
+      #10000: 171223-222156/ycsb/171224-033951.156-d
+      #15000: 171223-222217/ycsb/171224-033954.509-d
+      #20000: 171223-222237/ycsb/171224-033959.566-d
+      #
       #9000: 171221-012720/ycsb/171221-064516.092-d
       #10000: 171221-012736/ycsb/171221-064544.806-d
       #11000: 171221-012754/ycsb/171221-064618.481-d
@@ -76,21 +168,47 @@ mutant:
     "0.4, 0.1":
       1000:
         fn: 171221-012938/ycsb/171221-064708.202-d
-        time: 01:48:00-05:00:00
+        #time: 01:48:00-05:00:00
+        time: 02:40:00-03:02:00
       5000:
         fn: 171221-012956/ycsb/171221-064723.276-d
-        time: 00:20:00-01:10:00
+        #time: 00:20:00-01:10:00
+        #time: 00:26:00-00:43:00
+        time: 01:03:00-01:11:00
       10000:
         fn: 171221-013013/ycsb/171221-064826.832-d
-        time: 00:11:00-00:36:00
+        #time: 00:11:00-00:36:00
+        time: 00:40:30-00:51:00
+      # This could be lowered by a lot by selecting a different range
+      15000:
+        fn: 171223-221737/ycsb/171224-033547.503-d
+        #time: 00:31:00-00:42:00
+        #time: 00:13:00-00:23:00
+        time: 00:13:00-00:18:30
+
+      # Not stablized
+      #16000: 171224-233302/ycsb/171225-045303.031-d
+      #17000: 171224-233320/ycsb/171225-045305.678-d
+      18000:
+        fn: 171224-233335/ycsb/171225-045203.442-d
+        #time: 00:31:30-00:35:30
+        time: 00:30:00-00:37:00
+
       # These never stabilized
+      #19000: 171224-233350/ycsb/171225-045147.352-d
+      #20000: 171223-221758/ycsb/171224-033615.535-d
+      #30000: 171223-221816/ycsb/171224-033636.161-d
+      #40000: 171223-221833/ycsb/171224-033641.716-d
+      #50000: 171223-221851/ycsb/171224-033656.278-d
+      #
       #20000: 171221-013028/ycsb/171221-064807.001-d
       #30000: 171221-013043/ycsb/171221-064841.925-d
       #40000: 171221-015912/ycsb/171221-071809.760-d
     "0.5, 0.1":
       1000:
         fn: 171221-024145/ycsb/171221-080003.288-d
-        time: 02:15:00-03:10:00
+        #time: 02:15:00-03:10:00
+        time: 03:18:00-04:03:00
       5000:
         fn: 171221-024207/ycsb/171221-075956.013-d
         time: 00:20:00-01:10:00
@@ -115,186 +233,120 @@ mutant:
       70000:
         fn: 171221-123423/ycsb/171221-175232.520-d
         time: 00:03:00-00:05:00
+      # No need to plot
+      #72000: 171223-155304/ycsb/171223-211108.008-d
+      #74000: 171223-155326/ycsb/171223-211205.838-d
+      #76000: 171223-155346/ycsb/171223-211149.421-d
+      #78000: 171223-155406/ycsb/171223-211121.157-d
+      # Too low
+      #80000:
+      #  fn: 171223-155423/ycsb/171223-211228.225-d
+      #  time: 00:06:40-00:08:00
+      #85000:
+      #  fn: 171223-155445/ycsb/171223-211303.011-d
+      #  time: 00:06:20-00:07:30
+      #90000:
+      #  fn: 171223-155500/ycsb/171223-211142.485-d
+      #  time: 00:06:10-00:07:10
+      #91000:
+      #  fn: 171223-183101/ycsb/171223-234944.954-d
+      #  time: 00:06:05-00:07:05
+      # Doesn't look very stable
+      92000:
+        fn: 171223-183118/ycsb/171223-234949.523-d
+        time: 00:06:10-00:07:10
+      # Strange
+      #93000: 171223-183138/ycsb/171223-234955.921-d
+      #94000:
+      #  fn: 171223-183159/ycsb/171223-235050.697-d
+      #  time: 00:06:00-00:06:50
+      #95000:
+      #  fn: 171223-183216/ycsb/171223-235013.498-d
+      #  time: 00:06:00-00:06:50
+      #96000:
+      #  fn: 171223-191438/ycsb/171224-003307.264-d
+      #  time: 00:06:00-00:06:50
+      #97000:
+      #  fn: 171223-191501/ycsb/171224-003331.056-d
+      #  time: 00:05:55-00:06:40
+      #98000:
+      #  fn: 171223-191522/ycsb/171224-003345.630-d
+      #  time: 00:06:00-00:06:40
+      #99000:
+      #  fn: 171223-191540/ycsb/171224-003432.871-d
+      #  #time: 00:06:05-00:06:40
+      #  time: 00:05:35-00:06:40
+      #95000:
+      #  fn: 171223-170232/ycsb/171223-222058.552-d
+      #  time: 00:06:00-00:06:50
+      # Never got stablized
+      #100000: 171223-170256/ycsb/171223-222025.766-d
+      #105000: 171223-170316/ycsb/171223-222213.591-d
+      #110000: 171223-170338/ycsb/171223-222217.340-d
 
-# These need to be replaced
 rocksdb:
-  dn_base: ~/work/mutant/log/ycsb/rocksdb-ycsb-by-storages/trade-offs
-
-  # stg_dev: target_iops:
-  #
-  # The time range needs to be figured out by looking at the time-vs-allmetrics plots.
-
+  dn_base: ~/work/mutant/log/ycsb/rocksdb-metadata-org-ycsb-d-by-storages
   local-ssd:
     1000:
-      fn: 171124-150058/ycsb/171124-201344.024-d
-      time: 00:40:00-05:00:00
+      fn: 171125-110758/ycsb/171125-161934.339-d
+      time: 02:00:00-02:40:00
     5000:
-      fn: 171124-163839/ycsb/171124-215028.676-d
-      time: 00:08:00-00:50:00
+      fn: 171125-110823/ycsb/171125-162030.665-d
+      #time: 00:23:00-00:45:00
+      #time: 00:37:00-00:43:00
+      time: 00:37:00-00:42:30
     10000:
-      fn: 171123-192121/ycsb/171124-003236.229-d
-      time: 00:12:00-00:19:00
+      fn: 171125-110844/ycsb/171125-162033.878-d
+      #time: 00:09:00-00:30:00
+      time: 00:18:30-00:21:00
     20000:
-      fn: 171123-192145/ycsb/171124-003301.626-d
-      time: 00:02:00-00:12:00
+      fn: 171125-110909/ycsb/171125-162111.718-d
+      time: 00:06:00-00:10:00
     30000:
-      fn: 171123-192207/ycsb/171124-003351.679-d
-      time: 00:01:20-00:04:30
+      fn: 171125-110932/ycsb/171125-162138.855-d
+      time: 00:03:00-00:07:00
     40000:
-      fn: 171123-192231/ycsb/171124-003359.935-d
-      time: 00:01:10-00:06:00
+      fn: 171125-110952/ycsb/171125-162108.001-d
+      time: 00:02:30-00:05:20
     50000:
-      fn: 171123-192255/ycsb/171124-003415.016-d
-      time: 00:01:00-00:05:00
+      fn: 171125-111016/ycsb/171125-162103.696-d
+      time: 00:02:00-00:04:00
     60000:
-      fn: 171123-192313/ycsb/171124-003443.846-d
-      time: 00:00:50-00:04:00
+      fn: 171125-111040/ycsb/171125-162156.459-d
+      time: 00:01:30-00:03:00
     70000:
-      fn: 171123-192336/ycsb/171124-003553.173-d
-      time: 00:02:40-00:04:00
-      #fn: 171124-150122/ycsb/171124-201257.417-d
-      #time: 00:00:45-01:50:00
+      fn: 171125-111058/ycsb/171125-162309.583-d
+      time: 00:01:45-00:03:05
     80000:
-      fn: 171123-205216/ycsb/171124-020312.146-d
-      time: 00:00:30-00:03:00
-      #fn: 171124-150140/ycsb/171124-201256.404-d
-      #time: 00:00:35-00:02:02
+      fn: 171125-111118/ycsb/171125-162203.764-d
+      time: 00:01:35-00:02:20
     90000:
-      fn: 171123-205242/ycsb/171124-020403.056-d
-      time: 00:00:40-00:04:00
-    #  overloaded: true
-    ##
-    ## From here, you don't get a sustainable throughput
-    #100000:
-    #  fn: 171123-192440/ycsb/171124-003616.509-d
-    #  time: 00:00:40-00:04:00
-    #  overloaded: true
-    #
-    # A big dip
-    #110000: 171123-192503/ycsb/171124-003716.332-d
-    #
-    #110000:
-    #  fn: 171123-214042/ycsb/171124-025239.262-d
-    #  time: 00:00:40-00:03:00
-    #  overloaded: true
-    #120000:
-    #  fn: 171123-205305/ycsb/171124-020425.441-d
-    #  time: 00:00:40-00:03:00
-    #  overloaded: true
-    #
-    # Saturated
-    #130000:
-    #  fn: 171123-205330/ycsb/171124-020405.787-d
-    #  time: 00:00:40-00:03:00
-    # overloaded: true
-
-
+      fn: 171125-111141/ycsb/171125-162247.009-d
+      time: 00:01:50-00:02:10
+    100000:
+      fn: 171125-111204/ycsb/171125-162306.390-d
+      time: 00:01:40-00:01:57
+    110000:
+      fn: 171125-111227/ycsb/171125-162325.232-d
+      time: 00:01:35-00:01:45
+    #120000: 171125-111257/ycsb/171125-162404.907-d
+    #130000: 171125-111320/ycsb/171125-162415.625-d
   ebs-st1:
-    # Skip for aesthetic
-    #500:
-    #  fn: 171123-204441/ycsb/171124-020324.827-d
-    #  time: 01:30:00-08:00:00
-
-    # The lowest 2 have super high latencies. Interesting. EBS cache being cold due to less request density  might explain this.
     1000:
-      fn: 171123-204507/ycsb/171124-020349.217-d
-      time: 00:40:00-04:00:00
+      fn: 171125-111934/ycsb/171125-164134.824-d
+      time: 01:00:00-04:30:00
     1500:
-      fn: 171123-204532/ycsb/171124-020342.520-d
-      time: 00:25:00-02:40:00
-
-    # Strangely high
-    #2000:
-    #  fn: 171123-204559/ycsb/171124-020412.518-d
-    #  time: 00:11:30-02:00:00
-
-    #2500:
-    #  fn: 171123-204623/ycsb/171124-020430.055-d
-    #  time: 00:20:00-01:40:00
-    #3000:
-    #  fn: 171123-204647/ycsb/171124-020432.406-d
-    #  time: 00:40:00-01:30:00
-
-    # New exps.
-    #1000: 171218-001914/ycsb/171218-054836.553-d
-    #1500:
-    #  fn: 171218-005106/ycsb/171218-060948.823-d
-    #  time: 01:25:00-01:50:00
-
+      fn: 171125-111955/ycsb/171125-164147.039-d
+      time: 00:30:00-02:45:00
     2000:
-      fn: 171218-005131/ycsb/171218-061027.773-d
-      time: 00:17:00-01:50:00
-
+      fn: 171125-112017/ycsb/171125-164158.196-d
+      time: 00:20:00-02:10:00
     2500:
-      fn: 171218-005156/ycsb/171218-061039.901-d
-      time: 00:46:00-01:40:00
-
-    # These 3 have super low latencies. It might be what it's supposed to be.
+      fn: 171125-112036/ycsb/171125-164214.525-d
+      time: 00:25:00-01:50:00
     3000:
-      fn: 171218-005219/ycsb/171218-061045.860-d
-      time: 00:50:00-01:30:00
-    #3100:
-    #  fn: 171218-005241/ycsb/171218-061117.888-d
-    #  time: 00:55:00-01:20:00
-    # This one is even lower.
-    #3200:
-    #  fn: 171218-005302/ycsb/171218-061056.449-d
-    #  time: 00:58:48-01:18:00
-    3300:
-      fn: 171219-195334/ycsb/171220-011232.144-d
-      time: 01:51:30-02:22:00
-    #3400:
-    #  fn: 171219-222237/ycsb/171220-034134.142-d
-    #  time: 01:54:00-02:18:00
-    # Stabilized for a very brief moment. This must have been the boundary.
-    3500:
-      fn: 171219-195409/ycsb/171220-011300.754-d
-      time: 01:26:55-01:32:05
-
-    # These never made it. Seems like after some SSTable reorg, EBS rate limit kicked in.
-    #3600: 171219-195430/ycsb/171220-011426.464-d
-    #3700: 171219-195448/ycsb/171220-011430.016-d
-    #3800: 171219-195502/ycsb/171220-011348.201-d
-    #3900: 171219-195529/ycsb/171220-011401.279-d
-
-    # These 3 have too low latency. Let's try some more
-    #3100:
-    #  fn: 171124-172326/ycsb/171124-224206.725-d
-    #  time: 00:50:00-01:20:00
-    #3200:
-    #  fn: 171124-172348/ycsb/171124-224243.597-d
-    #  time: 00:58:00-01:20:00
-    #3300:
-    #  fn: 171124-172416/ycsb/171124-224229.031-d
-    #  time: 01:06:00-01:20:00
-
-    #3400:
-    #  fn: 171124-172436/ycsb/171124-224323.436-d
-    #  time: 00:25:00-01:20:00
-    #  overloaded: true
-
-    # Saturated from here
-    #3500:
-    #  fn: 171123-215703/ycsb/171124-031557.478-d
-    #  time: 00:20:00-00:45:00
-    #  overloaded: true
-    #
-    #4000:
-    #  fn: 171123-204729/ycsb/171124-020548.718-d
-    #  time: 00:16:00-01:08:00
-    #  overloaded: true
-
-    #4500:
-    #  fn: 171123-204753/ycsb/171124-020556.351-d
-    #  time: 00:20:00-01:20:00
-
-    #5000:
-    #  fn: 171123-202035/ycsb/171124-013927.678-d
-    #  time: 00:20:00-01:20:00
-
-
-  # # of requests is set in a way you can see long enough stabilized latency. Took some trials.
-  #   By looking at the file system cache size and db IOPS.
-  #
-  # Made SSTable compactions more predictable by setting L0 sstable compaction parameters and pending compaction parameters.
-  #   See db/db_impl.cc Open() and Open1()
+      fn: 171125-112056/ycsb/171125-164345.384-d
+      time: 00:45:00-01:20:00
+    #3500: 171125-112117/ycsb/171125-164356.837-d
+    #4000: 171125-112136/ycsb/171125-164455.546-d
+    #4500: 171125-112158/ycsb/171125-164355.226-d
