--- a/rocksdb/eval/mutant-ycsb-thrp-latency-by-costs/config.yaml
+++ b/rocksdb/eval/mutant-ycsb-thrp-latency-by-costs/config.yaml
@@ -321,7 +321,8 @@ rocksdb:
       time: 00:40:00-05:00:00
     5000:
       fn: 171124-163839/ycsb/171124-215028.676-d
-      time: 00:08:00-00:50:00
+      #time: 00:08:00-00:50:00
+      time: 00:08:00-00:16:00
     10000:
       fn: 171123-192121/ycsb/171124-003236.229-d
       time: 00:12:00-00:19:00
