--- a/rocksdb/eval/rocksdb-ycsb-time-vs-all-metrics-for-mutant-overhead-analysis/config.yaml
+++ b/rocksdb/eval/rocksdb-ycsb-time-vs-all-metrics-for-mutant-overhead-analysis/config.yaml
@@ -1,4 +1,10 @@
 dn_base: ~/work/mutant/log/ycsb/mutant-overhead
-unmodified_db: 171231-174845/ycsb/180101-052616.302-d
+
+unmodified_db: 180102-233916/ycsb/180103-045616.929-d
+computation_overhead: 180103-011127/ycsb/180103-062835.306-d
+io_overhead: 180103-011200/ycsb/180103-062835.782-d
+
+# CPU load too much with 30 K IOPS. Gets to 100% very early.
+#unmodified_db: 171231-174845/ycsb/180101-052616.302-d
 #computation_overhead: 180101-104649/ycsb/180101-174115.499-d
 #io_overhead: 180101-134217/ycsb/180102-052911.809-d
