--- a/rocksdb/eval/mutant-overhead/overhead-by-time/config.yaml
+++ b/rocksdb/eval/mutant-overhead/overhead-by-time/config.yaml
@@ -5,9 +5,6 @@ dn_base: ~/work/mutant/log/ycsb/mutant-overhead
 #computation_overhead: 180103-011127/ycsb/180103-062835.306-d
 #io_overhead:          180103-011200/ycsb/180103-062835.782-d
 
-# TODO: What was this?
-#180104-150130/ycsb/180104-202010.549-d.bz2
-
 # So with the computation overhead, it uses less CPU.
 #   It must have been from the unstable cloud performance, where the latter's IO overhead was somehow smaller.
 #     It drives me crazy.
@@ -15,3 +12,7 @@ dn_base: ~/work/mutant/log/ycsb/mutant-overhead
 unmodified_db:        180105-004823/ycsb/180105-081022.523-d.bz2
 computation_overhead: 180105-031211/ycsb/180105-082850.700-d.bz2
 io_overhead:          180105-031503/ycsb/180105-083222.854-d.bz2
+
+# These 2 included grandparents for calculating the output sstable path id, which turned out to be wrong.
+#io_overhead:          180108-185724/ycsb/180109-050525.028-d.bz2
+#io_overhead:          180108-192308/ycsb/180109-050503.292-d.bz2
