--- a/rocksdb/eval/mutant-overhead/overhead-by-time/config.yaml
+++ b/rocksdb/eval/mutant-overhead/overhead-by-time/config.yaml
@@ -5,15 +5,23 @@ dn_base: ~/work/mutant/log/ycsb/mutant-overhead
 #computation_overhead: 180103-011127/ycsb/180103-062835.306-d
 #io_overhead:          180103-011200/ycsb/180103-062835.782-d
 
+# Computation overhead measurement
+unmodified_db:        computation/180123-180457/ycsb/180123-231505.044-d
+computation_overhead: computation/180123-180528/ycsb/180123-231511.803-d
+
 # So with the computation overhead, it uses less CPU.
 #   It must have been from the unstable cloud performance, where the latter's IO overhead was somehow smaller.
 #     It drives me crazy.
 #     Tried user time only and user+kernel, but none of them looked good.
-unmodified_db:        1/180105-004823/ycsb/180105-081022.523-d
-computation_overhead: 1/180105-031211/ycsb/180105-082850.700-d
+#unmodified_db:        1/180105-004823/ycsb/180105-081022.523-d
+#computation_overhead: 1/180105-031211/ycsb/180105-082850.700-d
 
 # cost_slo_epsilon 0.1
-io_overhead: by-cost-slo-epsilons/180122-185607/ycsb/180123-000516.030-d
+io_overhead: io/by-cost-slo-epsilons/180123-174653/ycsb/180123-225547.119-d
+
+# This didn't include some SSTables while calculating the output path_id
+# cost_slo_epsilon 0.1
+#io_overhead: by-cost-slo-epsilons/180122-185607/ycsb/180123-000516.030-d
 
 # This had extra SSTable movements
 # cost_slo_epsilon 0.0
