--- a/rocksdb/eval/mutant-overhead/cost-slo-epsilons-vs-metrics/config.yaml
+++ b/rocksdb/eval/mutant-overhead/cost-slo-epsilons-vs-metrics/config.yaml
@@ -11,7 +11,8 @@ by_cost_slo_epsilons:
   0.05: io/by-cost-slo-epsilons/180123-174528/ycsb/180123-225402.821-d
   0.06: io/by-cost-slo-epsilons/180123-174543/ycsb/180123-225516.517-d
   0.07: io/by-cost-slo-epsilons/180123-174558/ycsb/180123-225459.209-d
-  0.08: io/by-cost-slo-epsilons/180123-174619/ycsb/180123-225511.917-d
+  # This didn't finish. TODO: redoing the experiment
+  #0.08: io/by-cost-slo-epsilons/180123-174619/ycsb/180123-225511.917-d
   0.09: io/by-cost-slo-epsilons/180123-174639/ycsb/180123-225627.219-d
   0.1:  io/by-cost-slo-epsilons/180123-174653/ycsb/180123-225547.119-d
   0.2:  io/by-cost-slo-epsilons/180123-174713/ycsb/180123-225555.906-d
