--- a/rocksdb/eval/mutant-overhead/cost-slo-epsilons-vs-metrics/config.yaml
+++ b/rocksdb/eval/mutant-overhead/cost-slo-epsilons-vs-metrics/config.yaml
@@ -14,14 +14,16 @@ by_cost_slo_epsilons:
   0.09: io/by-cost-slo-epsilons/180123-174639/ycsb/180123-225627.219-d
   0.1:  io/by-cost-slo-epsilons/180123-174653/ycsb/180123-225547.119-d
   0.2:  io/by-cost-slo-epsilons/180123-174713/ycsb/180123-225555.906-d
-  0.3:  io/by-cost-slo-epsilons/180123-174731/ycsb/180123-225627.706-d
-  0.4:  io/by-cost-slo-epsilons/180123-174752/ycsb/180123-225626.495-d
-  0.5:  io/by-cost-slo-epsilons/180123-174812/ycsb/180123-225703.131-d
-  0.6:  io/by-cost-slo-epsilons/180123-174830/ycsb/180123-225707.901-d
-  0.7:  io/by-cost-slo-epsilons/180123-174849/ycsb/180123-225737.913-d
-  0.8:  io/by-cost-slo-epsilons/180123-174904/ycsb/180123-225742.073-d
-  0.9:  io/by-cost-slo-epsilons/180123-174922/ycsb/180123-225838.910-d
-  1.0:  io/by-cost-slo-epsilons/180123-174939/ycsb/180123-225826.212-d
+
+# You don't need these.
+#  0.3:  io/by-cost-slo-epsilons/180123-174731/ycsb/180123-225627.706-d
+#  0.4:  io/by-cost-slo-epsilons/180123-174752/ycsb/180123-225626.495-d
+#  0.5:  io/by-cost-slo-epsilons/180123-174812/ycsb/180123-225703.131-d
+#  0.6:  io/by-cost-slo-epsilons/180123-174830/ycsb/180123-225707.901-d
+#  0.7:  io/by-cost-slo-epsilons/180123-174849/ycsb/180123-225737.913-d
+#  0.8:  io/by-cost-slo-epsilons/180123-174904/ycsb/180123-225742.073-d
+#  0.9:  io/by-cost-slo-epsilons/180123-174922/ycsb/180123-225838.910-d
+#  1.0:  io/by-cost-slo-epsilons/180123-174939/ycsb/180123-225826.212-d
 
   # This didn't finish. TODO: redoing the experiment
   #0.08: io/by-cost-slo-epsilons/180123-174619/ycsb/180123-225511.917-d
