Total SSTable size

--- a/rocksdb/eval/mutant-cost-adaptation/config.yaml
+++ b/rocksdb/eval/mutant-cost-adaptation/config.yaml
@@ -13,6 +13,14 @@ cost_slo: 0.4
 
 by_costchanges_targetiops:
   "15 0.2, 30 0.3":
-    4000: 180227-112539/ycsb/180227-164909.023-d
+    2000: 180227-115502/ycsb/180227-171223.457-d
+    3000: 180227-115428/ycsb/180227-171307.110-d
+    #4000: 180227-112539/ycsb/180227-164909.023-d
   "15 0.3, 30 0.35":
-    4000: 180227-115410/ycsb/180227-171254.830-d
+    2000: 180227-115517/ycsb/180227-171328.621-d
+    3000: 180227-115444/ycsb/180227-171308.848-d
+    #4000: 180227-115410/ycsb/180227-171254.830-d
+
+# TODO: Target IOPS 4000 might be too much. A big dip in throughput when the target IOPS changes.
+#
+# TODO: Mark when IOPS changes.
